--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'National songs -- United States'
 - !lcc 'ML'
+- GITenberg
 title: "Immortal Songs of Camp and Field\r\nThe Story of their Inspiration together\
   \ with Striking Anecdotes connected with their History"
 url: http://www.gutenberg.org/ebooks/43539
